# image-generator

./: .gitignore  CMakeLists.txt  Color.h  Makefile  README.md  main.cpp
src/: CMakeLists.txt  main.cpp  mainRasterization.cpp
src/rasterizer/: Rasterizer.cpp  Rasterizer.h
src/rasterizer/geometry/: BoundingBox.cpp  BoundingBox.h  SphereToTrianglesGenerator.cpp  SphereToTrianglesGenerator.h  Triangle2.cpp  Triangle2.h  TriangleOnViewport.cpp  TriangleOnViewport.h  TriangleProjection.cpp  TriangleProjection.h
src/raytracer/: RayTracer.cpp  RayTracer.h
src/shared/: Camera.cpp  Camera.h  Color.cpp  Color.h  DirectionalLight.cpp  DirectionalLight.h  Image.cpp  Image.h  Light.h  Object.h  Plane.cpp  Plane.h  PointLight.cpp  PointLight.h  Ray.cpp  Ray.h  Sphere.cpp  Sphere.h  Triange.h  Triangle.cpp  Triangle.h  Vector.cpp  Vector3.cpp  Vector3.h  WorldScene.cpp  WorldScene.h
src/shared/geometry/: Object.h  Plane.cpp  Plane.h  Ray.cpp  Ray.h  Sphere.cpp  Sphere.h  Triangle.cpp  Triangle.h
src/shared/math/: Matrix44.cpp  Matrix44.h  Vector2.cpp  Vector2.h  Vector3.cpp  Vector3.h
src/shared/rendering/: Camera.cpp  Camera.h  CameraRasterization.cpp  CameraRasterization.h  Color.cpp  Color.h  DirectionalLight.cpp  DirectionalLight.h  HSL.cpp  HSL.h  Image.cpp  Image.h  Light.h  LightFactory.cpp  LightFactory.h  PointLight.cpp  PointLight.h  SphereLight.cpp  SphereLight.h  WorldScene.cpp  WorldScene.h
